--- a/index.html
+++ b/index.html
@@ -19,28 +19,30 @@
         <nav>
           <ul>
             <li><a href="" id="Home">Home</a></li>
-            <li><a href="" id="Gallery">Gallery</a></li>
-            <li><a href="" id="Booking">Booking</a></li>
-            <li><a href="" id="Feedback">Feedback</a></li>
+            <li><a href="./Gallery/gallery.html" id="Gallery">Gallery</a></li>
+            <li><a href="./Booking/Booking.html" id="Booking">Booking</a></li>
+            <li>
+              <a href="./Feedback/Feedback.html" id="Feedback">Feedback</a>
+            </li>
           </ul>
         </nav>
       </div>
     </header>
     <div class="hero">
       <img
-        src="./greenFabric.jpg"
+        src="./images/greenFabric.jpg"
         alt="Green fabric background image"
         class="fabric"
       />
       <div class="imageText">
         <h3 id="h3image1">Welcome</h3>
         <h3 id="h3image2">View our collection</h3>
-        <button>Book now</button>
+        <a href="./Gallery/gallery.html"><button>Click Here</button></a>
       </div>
     </div>
     <div class="infoSection">
       <img
-        src="./høstferie pic1.png"
+        src="./images/høstferie pic1.png"
         alt="A collage of 3 pictures, first a painting of a butterfly, second a woman painting, third a finished colorful abstract painting"
         id="collage"
       />
@@ -55,6 +57,61 @@
           creativity, bonding, and relaxation among individuals of all ages.
           <br /><br />
           Book and try out our workshops here...
+        </p>
+        <a href="./Booking/Booking.html"
+          ><img src="./images/maki_arrow.png" id="arrow"
+        /></a>
+      </div>
+    </div>
+    <div class="forsale">
+      <h1>For Sale!</h1>
+    </div>
+    <div class="artimgs">
+      <img src="./images/Mosaic.jpg" alt="" />
+      <img src="./images/Watercolor.jpg" alt="" />
+      <img src="./images/Canvas.jpg" alt="" />
+    </div>
+    <div class="artImgText">
+      <h4>Mosaic art kit - 400kr</h4>
+      <h4>Watercolor art kit - 200kr</h4>
+      <h4>Canvas art kit - 300kr</h4>
+    </div>
+    <div class="artImgText2">
+      <p>
+        Kit includes: Frame, A4 size wood pallet to stick small regular or
+        irregular pieces of colored stone, gum.
+      </p>
+      <p>
+        Kit includes: Frame, watercolor painting paper with outline design,
+        Watercolors, brushes.
+      </p>
+      <p>
+        Kit includes: Frame, Acrylic painting paper with outline design, Acrylic
+        colors, brushes.
+      </p>
+    </div>
+    <div class="moreToCome">
+      <p>More kits available soon...</p>
+    </div>
+    <div class="bottomSocials">
+      <div class="logoText">
+        <img src="./images/Facebook.png" />
+        <p class="imgLogo">
+          Facebook<br />&nbsp;&nbsp; <small>Craftsvilla</small>
+        </p>
+      </div>
+      <div class="logoText">
+        <img src="./images/Insta.png" />
+        <p class="imgLogo">
+          Instagram<br />&nbsp;&nbsp;
+          <small>Craftsvilla</small>
+        </p>
+      </div>
+      <div class="logoText">
+        <img src="./images/twitter.png" />
+        <p class="imgLogo">
+          Twitter<br />
+          <small>@Craftsvilla</small>
         </p>
       </div>
     </div>
