--- a/Feedback/Feedback.html
+++ b/Feedback/Feedback.html
@@ -26,6 +26,85 @@
         </nav>
       </div>
     </header>
+    <div class="flex">
+      <div class="container2">
+        <form action="">
+          <label for="fname">First Name</label>
+          <br />
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your name.."
+          />
+          <br />
+
+          <label for="lname">Last Name</label>
+          <br />
+          <input
+            type="text"
+            id="lname"
+            name="lastname"
+            placeholder="Your last name.."
+          />
+          <br />
+
+          <label for="subject">Feedback</label>
+          <br />
+          <textarea
+            id="subject"
+            name="subject"
+            placeholder="Write your feedback here..."
+            style="height: 200px"
+          ></textarea
+          ><br />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </div>
+    <div class="flex">
+      <div class="reviewSection">
+        <div class="review">
+          <img
+            src="../Feedbackimages/pfp1.jpg"
+            alt="profile picture of a dog"
+          />
+          <div class="reviewp">
+            <h6>Fin Hund</h6>
+            <p>
+              A fantastic experience! A real strong community feel and good
+              staff.
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <img
+            src="../Feedbackimages/pfp2.jpg"
+            alt="profile picture of a young man"
+            id="img2"
+          />
+          <div class="reviewp">
+            <h6>Per Hjulsdal</h6>
+            <p>
+              Would go there again! Great equipment and somewhat decent prices.
+            </p>
+          </div>
+        </div>
+        <div class="review">
+          <img
+            src="../Feedbackimages/pfp3.jpg"
+            alt="profile picture of a man silhoutted against a sunset"
+          />
+          <div class="reviewp">
+            <h6>Jørgen Steinehaug</h6>
+            <p>
+              Decent workshop for creative outlets. Definetly focuses on the
+              community aspect.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="bottomSocials">
       <div class="logoText">
         <img src="../images/Facebook.png" />
