--- a/Feedback/Feedback.html
+++ b/Feedback/Feedback.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Feedbackstyles.css" />
-    <title>Cratsvilla</title>
+    <title>Craftsvilla</title>
   </head>
   <body>
     <header>
